--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.17.1",
     "pg": "^8.14.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.7.0",
